--- a/index.html
+++ b/index.html
@@ -89,29 +89,32 @@
                             </h1>
                             <span id="typed-text"></span>
                             <span class="cursor blink">&nbsp;</span>
+                            <br>
                         </div>
                     </div>
                 </div>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                <path fill="#ffffff" fill-opacity="1"
-                    d="M0,128L60,149.3C120,171,240,213,360,192C480,171,600,85,720,85.3C840,85,960,171,1080,197.3C1200,224,1320,192,1380,176L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
-                </path>
-            </svg>
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#ffffff" fill-opacity="1"
+                        d="M0,128L60,149.3C120,171,240,213,360,192C480,171,600,85,720,85.3C840,85,960,171,1080,197.3C1200,224,1320,192,1380,176L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                    </path>
+                </svg>
+            </div>
         </div>
         <!-- end section hero -->
         <!-- portfolio section -->
         <div id="Projectssection" class="sectionblock">
             <div class="container ">
                 <div class="abouthero">
-                    <h3 style="white-space: nowrap;text-align: center;">Projects</h3>
+                    <h3 style="white-space: nowrap;text-align: left;" id="projectText">Projects</h3>
                 </div>
                 <div class="row">
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
-                        <h3 class="mt-3 wrapservice__title"> Tenders Fight</h3>
+                        <h3 class="mt-3 wrapservice__title"> Tenders Fight.</h3>
                         <br>
                         <a href="/TendersFight/">
-                            <img src="asset/portfolio/Tendersheader.jpg" />
+                            <img class="hearderImage" src="asset/portfolio/Tendersheader.jpg" />
                         </a>
                         <p class="paragraph"><strong>Tenders Fight</strong> is the first game published on
                             <strong>Steam</strong> that we have <strong>monetised</strong>. It's a <strong>fast FPS
@@ -126,29 +129,19 @@
                                 <li>Gameplay programmer</li>
                             </ul>
                         </p>
-                        <p><i>Team:</i><br>
-                            <ul>
-                                <li>Lead level designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/tom-boutonnat-5bb2aa232/">Tom BOUTONNAT</a>
-                                </li>
-                                <li>VFX, animator and responsible for signs and feedback | <a target="_blank"
-                                        href="https://www.linkedin.com/in/gabriel-soussi-514593221/">Gabriel SOUSSI</a>
-                                </li>
-                            </ul>
-                        </p>
                         <p><i>Duration:</i><br>
                             <ul>
                                 <li>7 months</li>
                                 <li>January 2023 - July 2023</li>
                             </ul>
                         </p>
-                        <p>Plateform:<br>
+                        <p>Platform:<br>
                             <ul>
                                 <li> PC</li>
                             </ul>
                         </p>
                         <a href="/TendersFight" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More informations
+                            More information
                         </a>
                         <a target="_blank" href="https://store.steampowered.com/app/2374010/Tenders_Fight/"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -167,10 +160,10 @@
 
 
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
-                        <h3 class="mt-3 wrapservice__title"> Kotaro's Revenche</h3>
+                        <h3 class="mt-3 wrapservice__title"> Kotaro's Revenche.</h3>
                         <br>
                         <a href="/KotaroSRenvenge/">
-                            <img src="asset/portfolio/Kotaroheader.png" />
+                            <img class="hearderImage" src="asset/portfolio/Kotaroheader.png" />
                         </a>
                         <p class="paragraph"><strong>Kotaro's Revenge</strong> is a <strong>3D brawler</strong> in which
                             you use your a sword and a grappling hook to avenge your sensei in a cyberpunk city. </p>
@@ -204,7 +197,7 @@
                             </ul>
                         </p>
                         <a href="/KotaroSRenvenge" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More informations
+                            More information
                         </a>
                         <a target="_blank" href="https://moussa-neggaz.itch.io/kotaros-revenge"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -221,7 +214,7 @@
                         <h3 class="mt-3 wrapservice__title"> Soulbound.</h3>
                         <br>
                         <a href="/Soulbound/">
-                            <img src="asset/portfolio/Soulbound header.png" />
+                            <img class="hearderImage" src="asset/portfolio/Soulbound header.png" />
                         </a>
                         <p class="paragraph">Making this game was a very rewarding experience for me. It was the first
                             time i had the role of <strong>producer</strong> 100% of the time . I really learnt how to
@@ -264,7 +257,7 @@
                         </p>
 
                         <a href="/Soulbound" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More informations
+                            More information
                         </a>
                         <div class="iconsLittlesContainer">
                             <img class="image-icon-little"
@@ -279,7 +272,7 @@
                         <h3 class="mt-3 wrapservice__title"> Roller Rush Street Shift.</h3>
                         <br>
                         <a href="/RollerRush/">
-                            <img src="asset/portfolio/HeaderRollerrush.png" />
+                            <img class="hearderImage" src="asset/portfolio/HeaderRollerrush.png" />
                         </a>
                         <p class="paragraph">It's a <strong>multiplayer racing game </strong>in <strong>2.5D</strong>.
                             This game was the first group project carried out with programmers, but there were a lot of
@@ -328,7 +321,7 @@
                         </p>
 
                         <a href="/RollerRush" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More informations
+                            More information
                         </a>
                         <a target="_blank" href="https://is02ac.itch.io/roller-rush-street-shift"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -346,10 +339,48 @@
                     </div>
 
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
+                        <h3 class="mt-3 wrapservice__title"> Trailblazer.</h3>
+                        <br>
+                        <a href="/Trailblazer/">
+                            <img class="hearderImage" src="asset/portfolio/Trailblazer.png" />
+                        </a>
+                        <p class="paragraph"><strong> Trailblazers</strong> is a <strong>role-playing</strong> game
+                            based on the theme of the "World After". Players take on the role of Trailblazers,
+                            mercenaries who have to explore a hostile planet called Uthea, where they have to survive
+                            and leave once they have achieved their objectives.</p>
+                        <p><i>My roles:</i>
+                            <ul>
+                                <li>Game designer</li>
+                                <li>Narrative designer</li>
+                            </ul>
+                        </p>
+                        <p><i>Duration:</i><br>
+                            <ul>
+                                <li>3 months</li>
+                                <li>Februrary 2022 - April 2022</li>
+                            </ul>
+                        </p>
+
+                        <p><i>Plateforms:</i><br>
+                            <ul>
+                                <li> Paper</li>
+                                <li> PDF</li>
+                            </ul>
+                        </p>
+
+                        <a href="/Trailblazer/" class="btn linkbtn aboutlink aboutlinkLogo">
+                            More information
+                        </a>
+                        <div class="iconsLittlesContainer">
+                            <img class="image-icon-little"
+                                src="https://cdn-icons-png.flaticon.com/512/731/731965.png" />
+                        </div>
+                    </div>
+                    <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
                         <h3 class="mt-3 wrapservice__title"> Space Driver.</h3>
                         <br>
                         <a href="/SpaceDriver/">
-                            <img src="asset/portfolio/Header Space driver.png" />
+                            <img class="hearderImage" src="asset/portfolio/Header Space driver.png" />
                         </a>
                         <p class="paragraph">Welcome to <strong>Space Driver</strong>, a game where you have to survive
                             from planet to planet to make the best score possible. Each planet corresponds to 1 mini
@@ -368,7 +399,6 @@
                                 <li>December 2021 - March 2022</li>
                             </ul>
                         </p>
-                        <p><i>(Game was made alone)</i></p>
                         <p><i>Plateforms:</i><br>
                             <ul>
                                 <li> Android</li>
@@ -377,7 +407,7 @@
                         </p>
 
                         <a href="/SpaceDriver" class="btn linkbtn aboutlink aboutlinkLogo">
-                            More informations
+                            More information
                         </a>
                         <a target="_blank" href="https://is02ac.itch.io/space-driver"
                             class="btn linkbtn aboutlink aboutlinkLogo">
@@ -513,12 +543,12 @@
                                 </div>
                                 <a target="_blank" href="./asset/portfolio/cv_french.pdf"
                                     class="btn linkbtn aboutlink aboutlinkLogo" download>
-                                    Download french CV
+                                    Download French CV
                                 </a>
 
                                 <a target="_blank" href="./asset/portfolio/cv_english.pdf"
                                     class="btn linkbtn aboutlink aboutlinkLogo englishCvButton" download>
-                                    Download english CV
+                                    Download English CV
                                 </a>
                             </div>
                         </div>
