feat: add details pages

--- a/TendersFight/index.html
+++ b/TendersFight/index.html
@@ -100,7 +100,7 @@
                     <div class="col-lg-4 text-center text-lg-left">
                         <div class="abouthero">
                             <p class="paragraph"><strong>Tenders Fight</strong> is the first game published on
-                                <strong>Steam</strong> that we have <strong>monetised</strong>.<br><br> It's a
+                                <strong>Steam</strong> that we have <strong>monetized</strong>.<br><br> It's a
                                 <strong>fast FPS Game</strong> in which you take on the role of a space boxer who must
                                 fight against the evil forces of chickens in order to return to earth. <br><br>You can
                                 use your fists, feet and special abilities to defeat your enemies and escape the space
@@ -121,7 +121,7 @@
                 <br>
                 <br>
                 <div class="abouthero">
-                    <h3 style="white-space: nowrap;text-align: left; font-size: 30px;">What i learnt</h3>
+                    <h3 style="white-space: nowrap;text-align: left; font-size: 30px;">What I learnt</h3>
                     <br>
                     <ul>
                         <li>This was the first time we'd started a project knowing that we were going to publish it
