--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <img class="hearderImage" src="asset/portfolio/Tendersheader.jpg" />
                         </a>
                         <p class="paragraph"><strong>Tenders Fight</strong> is the first game published on
-                            <strong>Steam</strong> that we have <strong>monetised</strong>. It's a <strong>fast FPS
+                            <strong>Steam</strong> that we have <strong>monetized</strong>. It's a <strong>fast FPS
                                 Game</strong> in which you take on the role of a space boxer who must fight against the
                             evil forces of chickens in order to return to earth. You can use your fists, feet and
                             special abilities to defeat your enemies and escape the space ship.</p>
@@ -160,29 +160,18 @@
 
 
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
-                        <h3 class="mt-3 wrapservice__title"> Kotaro's Revenche.</h3>
+                        <h3 class="mt-3 wrapservice__title"> Kotaro's Revenge.</h3>
                         <br>
                         <a href="/KotaroSRenvenge/">
                             <img class="hearderImage" src="asset/portfolio/Kotaroheader.png" />
                         </a>
                         <p class="paragraph"><strong>Kotaro's Revenge</strong> is a <strong>3D brawler</strong> in which
-                            you use your a sword and a grappling hook to avenge your sensei in a cyberpunk city. </p>
+                            you use your sword and a grappling hook to avenge your sensei in a cyberpunk city. </p>
                         <p><i>My roles:</i>
                             <ul>
                                 <li>Game designer</li>
                                 <li>Gameplay programmer</li>
                             </ul>
-                        </p>
-                        <p><i>Team:</i><br>
-                            <ul>
-                                <li>Game designer, level designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/mbr-maxime-brunet/">Maxime BRUNET</a></li>
-                                <li>Game designer, Game programmer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/vdinechin/">Vincent DUPONT De DINECHIN</a>
-                                </li>
-                                <li>Game designer, UI designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/moussa-neggaz-5a3035223/">Moussa NEGGAZ</a>
-                                </li>
                         </p>
                         </ul>
                         <p><i>Duration:</i><br>
@@ -217,30 +206,11 @@
                             <img class="hearderImage" src="asset/portfolio/Soulbound header.png" />
                         </a>
                         <p class="paragraph">Making this game was a very rewarding experience for me. It was the first
-                            time i had the role of <strong>producer</strong> 100% of the time . I really learnt how to
+                            time I had the role of <strong>producer</strong> 100% of the time . I really learnt how to
                             manage a team. It was a real challenge to create the game. </p>
                         <p><i>My role:</i>
                             <ul>
                                 <li>Producer</li>
-                            </ul>
-                        </p>
-                        <p><i>Team:</i><br>
-                            <ul>
-                                <li>Game designer and co-producer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/ethisclauss/">Ethis CLAUSS</a></li>
-                                <li>Game designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/quentin-binetruy-44622725a/">Quentin
-                                        BINETRUY</a></li>
-                                <li>Game designer and 3D generalist artist | <a target="_blank"
-                                        href="https://www.linkedin.com/in/c%C3%A9lien-descamps-577446172/">Celien
-                                        DESCAMPS</a></li>
-                                <li>Game Programmer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/romain-gabrillargues/">Romain
-                                        GABRILLARGUES</a></li>
-                                <li>Game Programmer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/toni-zana-2b24aa240/">Toni ZANA</a></li>
-                                <li>Game Programmer | Dylan CHOU</li>
-                                <li>Game Programmer | Jean-baptiste HAUTEBAS</li>
                             </ul>
                         </p>
                         <p><i>Duration:</i><br>
@@ -274,38 +244,16 @@
                         <a href="/RollerRush/">
                             <img class="hearderImage" src="asset/portfolio/HeaderRollerrush.png" />
                         </a>
-                        <p class="paragraph">It's a <strong>multiplayer racing game </strong>in <strong>2.5D</strong>.
-                            This game was the first group project carried out with programmers, but there were a lot of
-                            us and we realised the difficulties of working in a <strong>team</strong> and the importance
-                            of the producer.</p>
+                         <p class="paragraph"><strong>Roller Rush Street Shift</strong> is a <strong>multiplayer</strong>
+                                racing game
+                                where players can move on several 2D planes in a cylindrical race.
+                                <br>
+                                <br>
+                                This game was made in 2.5D </p>
                         <p><i>My roles:</i>
                             <ul>
                                 <li>Game designer</li>
                                 <li>Level designer</li>
-                            </ul>
-                        </p>
-                        <p><i>Team:</i><br>
-                            <ul>
-                                <li>Game designer, Level designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/loicsaintilan/">Loic SAINTILAN</a></li>
-                                <li>Game designer, Level designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/maxwel-soares-313a92220/">Maxwel SOARES</a>
-                                </li>
-                                <li>Game designer, Level designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/j%C3%A9r%C3%B4me-thil-68977922a/">Jerome
-                                        THIL</a></li>
-                                <li>Game designer, Level designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/l%C3%A9onie-richard-183341205/">Léonie
-                                        RICHARD</a></li>
-                                <li>Sound designer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/gaylord-boitrelle-57093b229/">Gaylord
-                                        BOITRELLE</a></li>
-                                <li>Game Programmer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/vincent-devine/">Vincent DEVINE</a></li>
-                                <li>Game Programmer | <a target="_blank"
-                                        href="https://www.linkedin.com/in/ma%C3%ABl-jammet-8a10bb1ab/">Maël JAMMET</a>
-                                </li>
-                                <li>Game Programmer | Alexandre GAUTHIER</li>
                             </ul>
                         </p>
                         <p><i>Duration:</i><br>
@@ -339,9 +287,9 @@
                     </div>
 
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
-                        <h3 class="mt-3 wrapservice__title"> Trailblazer.</h3>
+                        <h3 class="mt-3 wrapservice__title"> Trailblazers.</h3>
                         <br>
-                        <a href="/Trailblazer/">
+                        <a href="/Trailblazers/">
                             <img class="hearderImage" src="asset/portfolio/Trailblazer.png" />
                         </a>
                         <p class="paragraph"><strong> Trailblazers</strong> is a <strong>role-playing</strong> game
@@ -368,7 +316,7 @@
                             </ul>
                         </p>
 
-                        <a href="/Trailblazer/" class="btn linkbtn aboutlink aboutlinkLogo">
+                        <a href="/Trailblazers/" class="btn linkbtn aboutlink aboutlinkLogo">
                             More information
                         </a>
                         <div class="iconsLittlesContainer">
@@ -384,7 +332,7 @@
                         </a>
                         <p class="paragraph">Welcome to <strong>Space Driver</strong>, a game where you have to survive
                             from planet to planet to make the best score possible. Each planet corresponds to 1 mini
-                            game! This project was realized the <strong>one button game</strong> project.</p>
+                            game! This project was carried out as part of a requested <strong>one button game</strong> project.</p>
                         <p><i>My roles:</i>
                             <ul>
                                 <li>Game designer</li>
@@ -447,13 +395,6 @@
                                 <h3 class="mt-3 wrapservice__title"> Producer.</h3>
                                 <p>Organising a team, taking advantage of each person's strengths and weaknesses to
                                     create the best game possible.</p>
-                            </div>
-                            <div class="wrapservice keen-slider__slide text-center text-lg-left">
-                                <i class="fa-brands fa-uncharted fa"></i>
-                                <h3 class="mt-3 wrapservice__title"> Technical designer.</h3>
-                                <p>Anticipate any design issues and liaise with designers and manufacturers to ensure
-                                    garment specifications are adjusted accordingly and that the end result is a
-                                    high-quality, marketable product.</p>
                             </div>
                             <div class="wrapservice keen-slider__slide text-center text-lg-left">
                                 <i class="fa-solid fa-archway fa"></i>
