--- a/TendersFight/index.html
+++ b/TendersFight/index.html
@@ -15,7 +15,7 @@
     <!-- metatag -->
     <meta name="author" content="Isaac MENARD" />
     <meta property="og:title" content="Isaac - Portfolio" />
-    <meta property="og:url" content="https://isaacmenard.githu.io" />
+    <meta property="og:url" content="https://isaacmenard.github.io" />
     <meta property="og:image" content="" />
     <meta property="og:description" content="Isaac - Portfolio" />
     <meta property="og:site_name" content="Isaac - Portfolio" />
@@ -33,10 +33,10 @@
             <div class="row headerwrap">
                 <div class="col-xs-12 col-md-12 col-lg-2">
                     <!-- wrap logo -->
-                    <div class="headerwrap__logo">
-                        <img src="../asset/page/logo-2.png" alt="logo" class="img-fluid logoHeader"
+                    <!-- <div class="headerwrap__logo">
+                        <img src="./asset/page/logo-2.png" alt="logo" class="img-fluid logoHeader"
                             style="height: 30px;" />
-                    </div>
+                    </div> -->
                     <!-- end wrap logo -->
                     <!-- navigation icon  -->
                     <div class="navicon d-block d-lg-none">
@@ -48,26 +48,26 @@
                     <!-- navigation desktop -->
                     <nav class="navpage text-left">
                         <ul class="navpage__wrap">
-                            <li class="navpage__list"><a href="../#sectionhero">Intro</a></li>
-                            <li class="navpage__list"><a href="#Projectssection" class="activelink">Projects</a></li>
-                            <li class="navpage__list"><a href="../#servicesection">Service</a></li>
+                            <li class="navpage__list"><a href="../#sectionhero" class="activelink">Intro</a></li>
                             <li class="navpage__list"><a href="../#aboutsection">About Me</a></li>
+                            <li class="navpage__list"><a href="#Projectssection">Projects</a></li>
                             <li class="navpage__list"><a href="#contactsection">Contact</a></li>
                         </ul>
                     </nav>
                     <!-- end navigation desktop -->
                 </div>
+                
             </div>
         </div>
+        <img src="../asset/portfolio/4x/Asset 4@4x.png" style="margin-bottom: -40px;">
     </header>
     <!-- end header -->
     <!-- mobile nav -->
     <div class="overlay">
         <div class="overlay__navigation">
             <ul class="overlay__listnav">
-                <li class="navpage__list"><a href="../#herosection">Intro</a></li>
+                <li class="navpage__list"><a href="../#herosection">home</a></li>
                 <li><a href="#Projectssection">Projects</a></li>
-                <li><a href="../#servicesection">Services</a></li>
                 <li><a href="../#aboutsection">About Me</a></li>
                 <li><a href="#contactsection">Contact</a></li>
             </ul>
@@ -75,12 +75,6 @@
     </div>
     <!-- main wrap -->
     <main id="mainwrap">
-
-        <svg class="pathHeader" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: 50px;">
-            <path fill="#ffffff" fill-opacity="1"
-                d="M0,128L60,149.3C120,171,240,213,360,192C480,171,600,85,720,85.3C840,85,960,171,1080,197.3C1200,224,1320,192,1380,176L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
-            </path>
-        </svg>
         <!-- end section hero -->
         <!-- portfolio section -->
         <div id="Projectssection" class="sectionblock">
@@ -92,7 +86,7 @@
 
                 <div class="row">
                     <div class="col-lg-8 text-center text-lg-left">
-                        <iframe width="714" height="401" src="https://www.youtube.com/embed/0F4T9coYLLQ"
+                        <iframe width="714" height="401" src="https://www.youtube.com/embed/Fo3woawTZKQ"
                             title="Tenders Fight - Game Trailer" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
@@ -147,9 +141,12 @@
                         <li>Lead level designer | <a target="_blank"
                                 href="https://www.linkedin.com/in/tom-boutonnat-5bb2aa232/">Tom BOUTONNAT</a>
                         </li>
-                        <li>VFX, animator and responsible for signs and feedback | <a target="_blank"
+                        <li>Game designer | <a target="_blank"
                                 href="https://www.linkedin.com/in/gabriel-soussi-514593221/">Gabriel SOUSSI</a>
                         </li>
+                        <li>Level designer | <a target="_blank"
+                            href="https://www.linkedin.com/in/ethisclauss/">Ethis CLAUSS</a>
+                    </li>
                     </ul>
                     </p>
                 </div>
@@ -161,33 +158,33 @@
                     <!-- Gallery -->
                     <div class="row">
                         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_b08a7c09b7a01dc5bc9a917a6c84afc02b7dc726.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_9ddfdb9258674b84ca29de2761d835e409d9dc83.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
 
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_4d24201e30fff47e09487a9ac086f9d9efa7cc26.1920x1080.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_4ad4e0c4af4b5b41f8c070d2fc6c884f26263c08.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_49a3f0054c8112bf12a82ed208f6669abeafeee0.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_c83864d3595570aa7c05d76b7ab4a26d674231c7.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
                         </div>
 
                         <div class="col-lg-4 mb-4 mb-lg-0">
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_21f317901b01ec2cd8d05d682af92ff29177bd0a.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_01734751a9f61d9c15df917493f4421a8e033f52.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
 
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_d96e25b972eb5d297cca16ae706ca30db0b4d2a2.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_b8923b1e1d50647b3171e22c0892902096984e2d.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_28ec9f2673fb48cb28f3af338f052c82e21fb2d0.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_ce6c1a21cac1b722bd1299cd12bc6a9016f67317.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
                         </div>
 
                         <div class="col-lg-4 mb-4 mb-lg-0">
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_7c8eae8a7c10c3c31472bc4a5cd5cbb13bf021d5.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_26b201386fa322df950462ffd580d529ca341a90.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
 
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_8505fda7f9a117d43ed478f1495ee46890ce6b72.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_e31dda966f0304f4eda01257e3350a52e58f84de.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
 
-                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_221b1a30b0cf7a97fc2803a621e6841c440a9434.600x338.jpg?t=1685714439"
+                            <img src="https://cdn.akamai.steamstatic.com/steam/apps/2374010/ss_644670936429105d8be48ee780323fb279994d41.600x338.jpg?t=1701860450"
                                 class="w-100 shadow-1-strong rounded mb-4 imgGallery" />
 
                         </div>
