--- a/Trailblazers/index.html
+++ b/Trailblazers/index.html
@@ -15,7 +15,7 @@
     <!-- metatag -->
     <meta name="author" content="Isaac MENARD" />
     <meta property="og:title" content="Isaac - Portfolio" />
-    <meta property="og:url" content="https://isaacmenard.githu.io" />
+    <meta property="og:url" content="https://isaacmenard.github.io" />
     <meta property="og:image" content="" />
     <meta property="og:description" content="Isaac - Portfolio" />
     <meta property="og:site_name" content="Isaac - Portfolio" />
@@ -33,10 +33,10 @@
             <div class="row headerwrap">
                 <div class="col-xs-12 col-md-12 col-lg-2">
                     <!-- wrap logo -->
-                    <div class="headerwrap__logo">
-                        <img src="../asset/page/logo-2.png" alt="logo" class="img-fluid logoHeader"
+                    <!-- <div class="headerwrap__logo">
+                        <img src="./asset/page/logo-2.png" alt="logo" class="img-fluid logoHeader"
                             style="height: 30px;" />
-                    </div>
+                    </div> -->
                     <!-- end wrap logo -->
                     <!-- navigation icon  -->
                     <div class="navicon d-block d-lg-none">
@@ -48,26 +48,26 @@
                     <!-- navigation desktop -->
                     <nav class="navpage text-left">
                         <ul class="navpage__wrap">
-                            <li class="navpage__list"><a href="../#sectionhero">Intro</a></li>
-                            <li class="navpage__list"><a href="#Projectssection" class="activelink">Projects</a></li>
-                            <li class="navpage__list"><a href="../#servicesection">Service</a></li>
+                            <li class="navpage__list"><a href="../#sectionhero" class="activelink">Intro</a></li>
                             <li class="navpage__list"><a href="../#aboutsection">About Me</a></li>
+                            <li class="navpage__list"><a href="#Projectssection">Projects</a></li>
                             <li class="navpage__list"><a href="#contactsection">Contact</a></li>
                         </ul>
                     </nav>
                     <!-- end navigation desktop -->
                 </div>
+                
             </div>
         </div>
+        <img src="../asset/portfolio/4x/Asset 4@4x.png" style="margin-bottom: -40px;">
     </header>
     <!-- end header -->
     <!-- mobile nav -->
     <div class="overlay">
         <div class="overlay__navigation">
             <ul class="overlay__listnav">
-                <li class="navpage__list"><a href="../#herosection">Intro</a></li>
+                <li class="navpage__list"><a href="../#herosection">home</a></li>
                 <li><a href="#Projectssection">Projects</a></li>
-                <li><a href="../#servicesection">Services</a></li>
                 <li><a href="../#aboutsection">About Me</a></li>
                 <li><a href="#contactsection">Contact</a></li>
             </ul>
@@ -75,12 +75,6 @@
     </div>
     <!-- main wrap -->
     <main id="mainwrap">
-
-        <svg class="pathHeader" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: 50px;">
-            <path fill="#ffffff" fill-opacity="1"
-                d="M0,128L60,149.3C120,171,240,213,360,192C480,171,600,85,720,85.3C840,85,960,171,1080,197.3C1200,224,1320,192,1380,176L1440,160L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
-            </path>
-        </svg>
         <!-- end section hero -->
         <!-- portfolio section -->
         <div id="Projectssection" class="sectionblock">
