--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <h3 class="mt-3 wrapservice__title"> Tenders Fight.</h3>
                         <br>
                         <a href="/TendersFight/">
-                            <img class="hearderImage" src="asset/portfolio/Tendersheader.jpg" />
+                            <img class="hearderImage" src="asset/portfolio/Capsule entete – 1.png" />
                         </a>
                         <p class="paragraph"><strong>Tenders Fight</strong> is the first game published on
                             <strong>Steam</strong> that we have <strong>monetized</strong>. It's a <strong>fast FPS
@@ -259,8 +259,8 @@
                         </p>
                         <p><i>Duration:</i><br>
                             <ul>
-                                <li>7 months</li>
-                                <li>January 2023 - July 2023</li>
+                                <li>11 months</li>
+                                <li>January 2023 - November 2023</li>
                             </ul>
                         </p>
                         <p>Platform:<br>
