change main page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <div class="backgroundOfSection"></div>
     <!-- header -->
     <header id="headermain">
         <div class="container">
@@ -62,6 +63,13 @@
         <img src="asset/portfolio/4x/Asset 4@4x.png" style="margin-bottom: -40px;">
     </header>
     <!-- end header -->
+      <!-- PRELOADER -->
+    <div class="preloader">
+        <div class="preloader__img">
+            <h1>LOADING..</h1>
+        </div>
+        <div class="preloaderBackground"></div>
+    </div>
     <!-- mobile nav -->
     <div class="overlay">
         <div class="overlay__navigation">
@@ -73,35 +81,41 @@
             </ul>
         </div>
     </div>
-    <main>
-        <br>
-        <br>
-        <div id="sectionhero" class="sectionblock">
-            <div class="container" style="padding-bottom: 10vw">
-                <div class="row h-100 d-flex align-items-center justify-content-center">
-                    <div id="rowFirstSection"
-                        class="col-lg-12 align-items-center justify-content-center align-items-lg-center justify-content-lg-center text-center text-lg-center d-flex order-1 order-lg-0 ">
-                        <div class="infohero ">
-                            <p class="infohero__p">Hello, I'm</p>
-                            <h1 class="infohero__title">Isaac
-                                <span>Menard</span>
-                            </h1>
-                            <br>
-                            <span id="typed-text"></span>
-                            <span class="cursor blink">&nbsp;</span>
-                            <br>
-                        </div>
+    
+    <br>
+    <br>
+    <div id="sectionhero" class="sectionblock">
+        <div class="container" style="padding-bottom: 5vw">
+            <div class="row h-100 d-flex align-items-center justify-content-center">
+                <div id="rowFirstSection"
+                    class="col-lg-12 align-items-center justify-content-center align-items-lg-center justify-content-lg-center text-center text-lg-center d-flex order-1 order-lg-0 ">
+                    <div class="infohero ">
+                        <p class="infohero__p">Hello, I'm</p>
+                        <h1 class="infohero__title">Isaac
+                            <span>MENARD</span>
+                        </h1>
+                        <br>
+                        <span id="typed-text"></span>
+                        <span class="cursor blink">&nbsp;</span>
+                        <br> 
                     </div>
                 </div>
             </div>
-            <img class="background" src="asset/portfolio/ezgif-3-5b3bc8b66b.gif">
-        <img src="asset/portfolio/4x/Asset 1@4x.png" style="margin-top: 10px;margin-bottom: -35px; filter: invert(1);">
-
         </div>
+        <div class="video-container headerVideo">
+            <iframe scrolling="no" src="https://www.youtube.com/embed/GYwZjdxOYfM?controls=0&autoplay=1&mute=1&playsinline=1&loop=1&playlist=GYwZjdxOYfM"></iframe>
+        </div>
+        <div class="blackTransition">
+            <img src="asset/portfolio/4x/Asset 4@4x.png" class="barHeader" style="filter: invert(0);">
+        </div>
+
+    </div>
+        <main>
         <!-- about section -->
         <div id="aboutsection" class="sectionblock">
-            <div class="backgroundOfSection"></div>
-
+           
+            <br>
+            <br>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 text-center text-lg-left">
@@ -192,8 +206,8 @@
                             <div class="col-lg-3">
                                 <div class="counterwrap">
                                     <p class="counterwrap__counternum"><img class="image-icon"
-                                            src="https://img.icons8.com/ios-filled/500/autodesk-maya.png" /></p>
-                                    <p class="counterwrap__counternum-text">MAYA
+                                            src="https://static-00.iconduck.com/assets.00/unreal-icon-2048x2048-6f2xqdhr.png" /></p>
+                                    <p class="counterwrap__counternum-text">UNREAL
                                     </p>
                                 </div>
                             </div>
