--- a/RollerRush/index.html
+++ b/RollerRush/index.html
@@ -272,14 +272,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank"
-                                    href="https://store.steampowered.com/search/?developer=Isaac%20MENARD">
+                                <a target="_blank" href="https://store.steampowered.com/search/?developer=Isaac%20MENARD">
                                     <i class="fa-brands fa-steam"></i>
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://is02ac.itch.io/">
-                                    <i class="fa-brands fa-itch-io"></i>
+                                <a target="_blank" href="https://medium.com/@menardisaac">
+                                    <i class="fa-brands fa-medium"></i>
                                 </a>
                             </li>
                             <li>
