--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div id="Projectssection" class="sectionblock">
             <div class="container ">
                 <div class="abouthero" style="padding-top: 30px;">
-                    <h3 style="white-space: nowrap;text-align: left;" id="projectText">Projects</h3>
+                    <h3 style="white-space: nowrap;text-align: left;" id="projectText">Combat design - Projects</h3>
                 </div>
                 <div class="row">
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
@@ -418,7 +418,13 @@
                             <img class="image-icon-little" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" />
                         </div>
                     </div>
-
+                </div>
+                <br>
+                    <div class="abouthero" style="padding-top: 30px;">
+                        <h3 style="white-space: nowrap;text-align: left; font-family: 'Courier New', Courier, monospace;" id="projectText">_____________________________________</h3><br><br>
+                        <h3 style="white-space: nowrap;text-align: left;" id="projectText">Others - Projects</h3>
+                    </div>
+                    <div class="row">
                     <div class="text-left text-lg-left col-lg-6" style="margin-top: 60px;">
                         <h3 class="mt-3 wrapservice__title"> Soulbound.</h3>
                         <br>
@@ -638,8 +644,8 @@
                             </a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://is02ac.itch.io/">
-                                <i class="fa-brands fa-itch-io"></i>
+                            <a target="_blank" href="https://medium.com/@menardisaac">
+                                <i class="fa-brands fa-medium"></i>
                             </a>
                         </li>
                         <li>
